--- a/RapiDoc.html
+++ b/RapiDoc.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <rapi-doc
-    spec-url="https://raw.githubusercontent.com/mrin9/RapiDoc/master/docs/specs/petstore_extended.yaml"
+    spec-url="C:\Users\spear\Documents\pandoc-test\AdTech.yaml"
     theme = "dark"
   > </rapi-doc>
 </body>
